--- a/index.html
+++ b/index.html
@@ -175,10 +175,12 @@
             />
             <div class="container pb-6">
               <p class="text-stone-800 text-center w-[25vh]">
-                Hello there! I am Pranjal Gaur, a final year student at
+                Hello there! I am Pranjal Gaur, a software developer from
                 <a class="text-[#f8485e]" href="https://mbm.ac.in/"
                   >MBM University</a
-                >, Jodhpur.
+                >, Jodhpur. I am currently working at <a class="text-[#f8485e]" href="https://www.securemeters.com/"
+                  >Secure Meters Ltd.</a
+                >
                 <a class="text-[#f8485e]" href="#contact">Let's Connect!</a>
               </p>
             </div>
@@ -187,11 +189,11 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>C/C++</h4>
+                  <h4>Flutter Bloc</h4>
                 </td>
                 <td class="percent-fill w-[22vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[8vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">75%</h4>
+                  <h4 class="text-[#363635]">60%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -199,11 +201,23 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>Python</h4>
+                  <h4>Flutter</h4>
                 </td>
                 <td class="percent-fill w-[19vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[11vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">65%</h4>
+                  <h4 class="text-[#363635]">70%</h4>
+                </td>
+              </tr>
+              <tr class="bg-[#eaeaea] h-[1vh]"></tr>
+            </table>
+            <table>
+              <tr>
+                <td class="skill text-center w-[15vmin] h-[3vh]">
+                  <h4>Dart</h4>
+                </td>
+                <td class="percent-fill w-[19vmax] h-[3vh]"></td>
+                <td class="percent text-right pr-2 w-[11vmax] h-[3vh]">
+                  <h4 class="text-[#363635]">70%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -215,7 +229,7 @@
                 </td>
                 <td class="percent-fill w-[21vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[9vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">70%</h4>
+                  <h4 class="text-[#363635]">60%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -223,11 +237,11 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>HTML</h4>
+                  <h4>.NET Web API</h4>
                 </td>
                 <td class="percent-fill w-[22vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[8vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">75%</h4>
+                  <h4 class="text-[#363635]">65%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -235,11 +249,11 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>CSS</h4>
+                  <h4>PostgreSQL</h4>
                 </td>
                 <td class="percent-fill w-[21vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[9vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">70%</h4>
+                  <h4 class="text-[#363635]">60%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -247,11 +261,11 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>JS</h4>
+                  <h4>Firebase</h4>
                 </td>
                 <td class="percent-fill w-[21vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[9vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">70%</h4>
+                  <h4 class="text-[#363635]">50%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -259,7 +273,7 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>React</h4>
+                  <h4>Figma</h4>
                 </td>
                 <td class="percent-fill w-[18vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[12vmax] h-[3vh]">
@@ -352,6 +366,72 @@
             <button
               class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
               onclick="window.open('https://pranjalg.github.io/Drum-kit/')"
+            >
+              Visit
+            </button>
+          </div>
+        </div>
+        <div class="card py-14 h-[20vmax]">
+          <div>
+            <img
+              class="card-img-top image4 canvas w-[30vmax] h-[18vmax] rounded-lg"
+              src="./images/project-thumbnails/tindog.png"
+              alt="Card image cap"
+            />
+          </div>
+          <div
+            class="block4 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
+          >
+            <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
+              TinDog Website Design
+            </p>
+            <button
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              onclick="window.open('https://pranjalg.github.io/TindDog-website/')"
+            >
+              Visit
+            </button>
+          </div>
+        </div>
+        <div class="card py-14 h-[20vmax]">
+          <div>
+            <img
+              class="card-img-top image5 canvas w-[30vmax] h-[18vmax] rounded-lg"
+              src="./images/project-thumbnails/card-for-business-page.png"
+              alt="Card image cap"
+            />
+          </div>
+          <div
+            class="block5 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
+          >
+            <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
+              Card Design for business website
+            </p>
+            <button
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              onclick="window.open('https://dribbble.com/PranjalG')"
+            >
+              Visit
+            </button>
+          </div>
+        </div>
+        <div class="card py-14 h-[20vmax]">
+          <div>
+            <img
+              class="card-img-top image6 canvas w-[30vmax] h-[18vmax] rounded-lg"
+              src="./images/project-thumbnails/finance-app-design.png"
+              alt="Card image cap"
+            />
+          </div>
+          <div
+            class="block6 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
+          >
+            <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
+              Finance Application Design
+            </p>
+            <button
+              class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
+              onclick="window.open('https://dribbble.com/PranjalG')"
             >
               Visit
             </button>
