--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
     <section
       id="projects"
-      class="py-20 lg:h-[60vmax] md:h-[90vmax] sm:h-[90vmax]"
+      class="py-20 lg:h-[90vmax] md:h-[120vmax] sm:h-[120vmax]"
     >
       <div class="text-center">
         <h1 class="header serif-font text-center font-bold text-[4vmin]">
@@ -441,7 +441,7 @@
           <div>
             <img
               class="card-img-top image4 canvas w-[30vmax] h-[18vmax] rounded-lg"
-              src="./images/project-thumbnails/tindog.png"
+              src="./images/project-thumbnails/flutter_articles_app.png"
               alt="Card image cap"
             />
           </div>
@@ -449,11 +449,11 @@
             class="block4 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
           >
             <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
-              TinDog Website Design
+              Articles Mobile App
             </p>
             <button
               class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
-              onclick="window.open('https://pranjalg.github.io/TindDog-website/')"
+              onclick="window.open('https://github.com/PranjalG/flutter_articles_app')"
             >
               Visit
             </button>
