--- a/index.html
+++ b/index.html
@@ -177,11 +177,12 @@
               <p class="text-stone-800 text-center w-[25vh]">
                 Hello there! I am Pranjal Gaur, a software developer from
                 <a class="text-[#f8485e]" href="https://mbm.ac.in/"
-                  >MBM University</a
-                >, Jodhpur. I am currently working at <a class="text-[#f8485e]" href="https://www.securemeters.com/"
-                  >Secure Meters Ltd.</a
-                >
-                <a class="text-[#f8485e]" href="#contact">Let's Connect!</a>
+                  >MBM University</a>
+                  , Jodhpur. I am currently working at <a class="text-[#f8485e]" href="https://www.securemeters.com/"
+                  >Secure Meters Ltd.
+                  </a>
+                  <br></br>
+                <a class="text-[#f8485e]" href="#contact"> Let's Connect!</a>
               </p>
             </div>
           </div>
@@ -189,11 +190,11 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>Flutter Bloc</h4>
+                  <h4>Flutter</h4>
                 </td>
                 <td class="percent-fill w-[22vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[8vmax] h-[3vh]">
-                  <h4 class="text-[#363635]">60%</h4>
+                  <h4 class="text-[#363635]">75%</h4>
                 </td>
               </tr>
               <tr class="bg-[#eaeaea] h-[1vh]"></tr>
@@ -201,7 +202,7 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>Flutter</h4>
+                  <h4>Bloc</h4>
                 </td>
                 <td class="percent-fill w-[19vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[11vmax] h-[3vh]">
@@ -237,7 +238,7 @@
             <table>
               <tr>
                 <td class="skill text-center w-[15vmin] h-[3vh]">
-                  <h4>.NET Web API</h4>
+                  <h4>.NET</h4>
                 </td>
                 <td class="percent-fill w-[22vmax] h-[3vh]"></td>
                 <td class="percent text-right pr-2 w-[8vmax] h-[3vh]">
@@ -440,13 +441,13 @@
         <div class="card py-14 h-[20vmax]">
           <div>
             <img
-              class="card-img-top image4 canvas w-[30vmax] h-[18vmax] rounded-lg"
+              class="card-img-top image7 canvas w-[30vmax] h-[18vmax] rounded-lg"
               src="./images/project-thumbnails/flutter_articles_app.png"
               alt="Card image cap"
             />
           </div>
           <div
-            class="block4 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
+            class="block7 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
           >
             <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
               Articles Mobile App
@@ -462,8 +463,8 @@
         <div class="card py-14 h-[20vmax]">
           <div>
             <img
-              class="card-img-top image5 canvas w-[30vmax] h-[18vmax] rounded-lg"
-              src="./images/project-thumbnails/card-for-business-page.png"
+              class="card-img-top image8 canvas w-[30vmax] h-[18vmax] rounded-lg"
+              src="./images/project-thumbnails/energy_efficiency.png"
               alt="Card image cap"
             />
           </div>
@@ -471,11 +472,11 @@
             class="block5 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
           >
             <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
-              Card Design for business website
+              Energy Efficiency Mobile App
             </p>
             <button
               class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
-              onclick="window.open('https://dribbble.com/PranjalG')"
+              onclick="window.open('https://play.google.com/store/apps/details?id=com.secure.myewatchonline&hl=en_IN')"
             >
               Visit
             </button>
