--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
     <section
       id="projects"
-      class="py-20 lg:h-[90vmax] md:h-[120vmax] sm:h-[120vmax]"
+      class="py-20 lg:h-[80vmax] md:h-[110vmax] sm:h-[110vmax]"
     >
       <div class="text-center">
         <h1 class="header serif-font text-center font-bold text-[4vmin]">
@@ -442,7 +442,7 @@
           <div>
             <img
               class="card-img-top image7 canvas w-[30vmax] h-[18vmax] rounded-lg"
-              src="./images/project-thumbnails/flutter_articles_app.png"
+              src="./images/project-thumbnails/articles_app.png"
               alt="Card image cap"
             />
           </div>
@@ -469,7 +469,7 @@
             />
           </div>
           <div
-            class="block5 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
+            class="block8 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
           >
             <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
               Energy Efficiency Mobile App
@@ -485,20 +485,20 @@
         <div class="card py-14 h-[20vmax]">
           <div>
             <img
-              class="card-img-top image6 canvas w-[30vmax] h-[18vmax] rounded-lg"
-              src="./images/project-thumbnails/finance-app-design.png"
+              class="card-img-top image9 canvas w-[30vmax] h-[18vmax] rounded-lg"
+              src="./images/project-thumbnails/healthcare.png"
               alt="Card image cap"
             />
           </div>
           <div
-            class="block6 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
+            class="block9 bg-[#1f1d36] flex flex-col w-[30vmax] h-[18vmax] rounded-lg"
           >
             <p class="bottom-0 text-[2.5vmin] serif-font m-auto mb-2 pb-2 py-8">
-              Finance Application Design
+              Healthcare Mobile App
             </p>
             <button
               class="border-4 b1 bg-cyan-500 border-cyan-500 rounded-lg shadow-md shadow-cyan-500 px-6 py-2 m-auto mt-2 py-8"
-              onclick="window.open('https://dribbble.com/PranjalG')"
+              onclick="window.open('https://github.com/PranjalG/quick_med_mobile_app')"
             >
               Visit
             </button>
