--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               Hello, I'm <span class="my-name">Pranjal Gaur</span>
             </h1>
             <p class="text-[4.5vmin] serif-font">
-              I am a full-stack web developer
+              Software Developer / Flutter Developer / Cross Platform Mobile App + Web Developer
             </p>
           </div>
         </div>
