--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               Hello, I'm <span class="my-name">Pranjal Gaur</span>
             </h1>
             <p class="text-[4.5vmin] serif-font">
-              Software Developer / Flutter Developer / Cross Platform Mobile App + Web Developer
+              Software Developer / Flutter Developer / Cross Platform Mobile App Developer
             </p>
           </div>
         </div>
@@ -96,10 +96,10 @@
             </h1>
             <p class="text-stone-800 text-justify p-[1.5vmax]">
               I had an inclination towards technology and computing since
-              childhood but my first exposure was 5 years ago where I selected
-              Java for HSC and scored 99/100 in my final exam. I learned C/C++
-              during the first semester of college,joined AI Club in second
-              semester and gained knowledge of Machine Learning through Python.
+              childhood but my first exposure was in 2017 years ago where I selected
+              Java (IP) for HSC and scored 99/100 in my final exam. I learned C/C++
+              during the first year of college, joined AI Club as a sophomore where I learnt Python
+              and Machine learning. Following that, started working with Dart and Flutter Framework.
             </p>
           </div>
           <div>
@@ -114,11 +114,11 @@
               Development
             </h1>
             <p class="text-stone-800 text-justify p-[1.5vmax]">
-              I am interested in developing web-applications as it helps to
-              execute every bit of knowledge gained and present out a means to
-              solve a real world problem. I have practiced web-development and
-              built frontend as well as full-stack projects that showcase
-              innovation.
+              I am interested in developing cross-platform applications as it helps to
+              execute every bit of knowledge gained and present out a means to solve a 
+              real world problem. I have practiced web as well as mobile development 
+              emphasizing on good user experience (front end). I have worked on personal 
+              full-stack projects involving backend and cloud platforms.
             </p>
           </div>
           <div>
@@ -156,8 +156,8 @@
               through modern approach. I enjoy the mental challenge that
               programming presents and the possibility of being able to conceive
               a new idea and bring it to fruition. I am constantly working on
-              upgrading myself with the evolving technologies such as IoT and
-              Web3.
+              upgrading myself with the evolving technologies such as Machine Learning
+              Generative AI and creating custom Chatbots using Python (AI).
             </p>
           </div>
         </div>
